TigerCompiler/Grammar/tigerParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 3.4
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// $ANTLR 3.4 C:\\Users\\Yanesita&Machy\\Desktop\\TIGER-YanetFrancisco(C412)-FabiolaBecerra(C411)\\CODIGO\\TigerCompiler\\TigerCompiler\\Grammar\\tiger.g 2014-04-27 15:21:32

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 219
// Unreachable code detected.
#pragma warning disable 162
// Missing XML comment for publicly visible type or member 'Type_or_Member'
#pragma warning disable 1591
// CLS compliance checking will not be performed on 'type' because it is not visible from outside this assembly.
#pragma warning disable 3019

 
    using System;


using System.Collections.Generic;
using Antlr.Runtime;
using Antlr.Runtime.Misc;


using Antlr.Runtime.Tree;
using RewriteRuleITokenStream = Antlr.Runtime.Tree.RewriteRuleTokenStream;

namespace  TigerCompiler.Grammar 
{
[System.CodeDom.Compiler.GeneratedCode("ANTLR", "3.4")]
[System.CLSCompliant(false)]
public partial class tigerParser : Antlr.Runtime.Parser
{
	internal static readonly string[] tokenNames = new string[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "AACCESS", "ACCESS", "AND", "ARRAY", "ARRAYDEC", "ARRAYTYPE", "ASSIGN", "BACK_SLASH", "BINARYDIGIT", "BREAK", "CALL", "CBRACK", "CKEYS", "COLON", "COMMA", "COMMENT", "CPAR", "DECLIST", "DIGIT", "DIV", "DO", "DOT", "DOUBLE_QUOTE", "ELSE", "END", "EQ", "ESC_SEQ", "EXPLIST", "EXPSEQ", "FIELD", "FIELDLIST", "FOR", "FUNC", "FUNCBLOCK", "FUNCDEC", "GT", "GTEQ", "HALFOFBYTE", "ID", "IDACCESS", "IF", "IN", "INT", "LET", "LT", "LTEQ", "MINUS", "MULT", "NEG", "NIL", "NOTEQ", "OBRACK", "OCTAL", "OF", "OKEYS", "OPAR", "OR", "PLUS", "PRINTABLECHAR", "PRINT_CHAR", "PROC", "RECORDDEC", "RECORDTYPE", "SMCOL", "STRING", "THEN", "TO", "TYPE", "TYPEBLOCK", "TYPEDEC", "TYPEFIELD", "TYPEFIELDS", "TYPETOK", "VALUE", "VAR", "VARBLOCK", "WHILE", "WS"
	};
	public const int EOF=-1;
	public const int AACCESS=4;
	public const int ACCESS=5;
	public const int AND=6;
	public const int ARRAY=7;
	public const int ARRAYDEC=8;
	public const int ARRAYTYPE=9;
	public const int ASSIGN=10;
	public const int BACK_SLASH=11;
	public const int BINARYDIGIT=12;
	public const int BREAK=13;
	public const int CALL=14;
	public const int CBRACK=15;
	public const int CKEYS=16;
	public const int COLON=17;
	public const int COMMA=18;
	public const int COMMENT=19;
	public const int CPAR=20;
	public const int DECLIST=21;
	public const int DIGIT=22;
	public const int DIV=23;
	public const int DO=24;
	public const int DOT=25;
	public const int DOUBLE_QUOTE=26;
	public const int ELSE=27;
	public const int END=28;
	public const int EQ=29;
	public const int ESC_SEQ=30;
	public const int EXPLIST=31;
	public const int EXPSEQ=32;
	public const int FIELD=33;
	public const int FIELDLIST=34;
	public const int FOR=35;
	public const int FUNC=36;
	public const int FUNCBLOCK=37;
	public const int FUNCDEC=38;
	public const int GT=39;
	public const int GTEQ=40;
	public const int HALFOFBYTE=41;
	public const int ID=42;
	public const int IDACCESS=43;
	public const int IF=44;
	public const int IN=45;
	public const int INT=46;
	public const int LET=47;
	public const int LT=48;
	public const int LTEQ=49;
	public const int MINUS=50;
	public const int MULT=51;
	public const int NEG=52;
	public const int NIL=53;
	public const int NOTEQ=54;
	public const int OBRACK=55;
	public const int OCTAL=56;
	public const int OF=57;
	public const int OKEYS=58;
	public const int OPAR=59;
	public const int OR=60;
	public const int PLUS=61;
	public const int PRINTABLECHAR=62;
	public const int PRINT_CHAR=63;
	public const int PROC=64;
	public const int RECORDDEC=65;
	public const int RECORDTYPE=66;
	public const int SMCOL=67;
	public const int STRING=68;
	public const int THEN=69;
	public const int TO=70;
	public const int TYPE=71;
	public const int TYPEBLOCK=72;
	public const int TYPEDEC=73;
	public const int TYPEFIELD=74;
	public const int TYPEFIELDS=75;
	public const int TYPETOK=76;
	public const int VALUE=77;
	public const int VAR=78;
	public const int VARBLOCK=79;
	public const int WHILE=80;
	public const int WS=81;

	 public  tigerParser(ITokenStream input)
		: this(input, new RecognizerSharedState())
	{
	}
	 public  tigerParser(ITokenStream input, RecognizerSharedState state)
		: base(input, state)
	{
		ITreeAdaptor treeAdaptor = default(ITreeAdaptor);
		CreateTreeAdaptor(ref treeAdaptor);
		TreeAdaptor = treeAdaptor ?? new CommonTreeAdaptor();
		OnCreated();
	}
	// Implement this function in your helper file to use a custom tree adaptor
	partial void CreateTreeAdaptor(ref ITreeAdaptor adaptor);

	private ITreeAdaptor adaptor;

	public ITreeAdaptor TreeAdaptor
	{
		get
		{
			return adaptor;
		}

		set
		{
			this.adaptor = value;
		}
	}

	public override string[] TokenNames { get { return tigerParser.tokenNames; } }
	public override string GrammarFileName { get { return "C:\\Users\\Yanesita&Machy\\Desktop\\TIGER-YanetFrancisco(C412)-FabiolaBecerra(C411)\\CODIGO\\TigerCompiler\\TigerCompiler\\Grammar\\tiger.g"; } }


	partial void OnCreated();
	partial void EnterRule(string ruleName, int ruleIndex);
	partial void LeaveRule(string ruleName, int ruleIndex);

	#region Rules
	partial void EnterRule_program();
	partial void LeaveRule_program();

	// $ANTLR start "program"
	// C:\\Users\\Yanesita&Machy\\Desktop\\TIGER-YanetFrancisco(C412)-FabiolaBecerra(C411)\\CODIGO\\TigerCompiler\\TigerCompiler\\Grammar\\tiger.g:152:8: public program : exp EOF !;
	[GrammarRule("program")]
	public AstParserRuleReturnScope<object, IToken> program()
	{
		EnterRule_program();
		EnterRule("program", 1);
		TraceIn("program", 1);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken EOF2 = default(IToken);
		AstParserRuleReturnScope<object, IToken> exp1 = default(AstParserRuleReturnScope<object, IToken>);

		object EOF2_tree = default(object);
		try { DebugEnterRule(GrammarFileName, "program");
		DebugLocation(152, 24);
		try
		{
			// C:\\Users\\Yanesita&Machy\\Desktop\\TIGER-YanetFrancisco(C412)-FabiolaBecerra(C411)\\CODIGO\\TigerCompiler\\TigerCompiler\\Grammar\\tiger.g:152:15: ( exp EOF !)
			DebugEnterAlt(1);
			// C:\\Users\\Yanesita&Machy\\Desktop\\TIGER-YanetFrancisco(C412)-FabiolaBecerra(C411)\\CODIGO\\TigerCompiler\\TigerCompiler\\Grammar\\tiger.g:152:17: exp EOF !
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(152, 17);
			PushFollow(Follow._exp_in_program809);
			exp1=exp();
			PopFollow();
			if (state.failed) return retval;
			if (state.backtracking == 0) adaptor.AddChild(root_0, exp1.Tree);
			DebugLocation(152, 24);
			EOF2=(IToken)Match(input,EOF,Follow._EOF_in_program811); if (state.failed) return retval;

			}

			retval.Stop = (IToken)input.LT(-1);

			if (state.backtracking == 0) {
			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("program", 1);
			LeaveRule("program", 1);
			LeaveRule_program();
		}
		DebugLocation(152, 24);
		} finally { DebugExitRule(GrammarFileName, "program"); }
		return retval;

	}
	// $ANTLR end "program"

	partial void EnterRule_exp();
	partial void LeaveRule_exp();

	// $ANTLR start "exp"
	// C:\\Users\\Yanesita&Machy\\Desktop\\TIGER-YanetFrancisco(C412)-FabiolaBecerra(C411)\\CODIGO\\TigerCompiler\\TigerCompiler\\Grammar\\tiger.g:154:1: exp : auxOR ( OR ^ auxOR )* ;
	[GrammarRule("exp")]
	private AstParserRuleReturnScope<object, IToken> exp()
	{
		EnterRule_exp();
		EnterRule("exp", 2);
		TraceIn("exp", 2);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken OR4 = default(IToken);
		AstParserRuleReturnScope<object, IToken> auxOR3 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> auxOR5 = default(AstParserRuleReturnScope<object, IToken>);

		object OR4_tree = default(object);
		try { DebugEnterRule(GrammarFileName, "exp");
		DebugLocation(154, 29);
		try
		{
			// C:\\Users\\Yanesita&Machy\\Desktop\\TIGER-YanetFrancisco(C412)-FabiolaBecerra(C411)\\CODIGO\\TigerCompiler\\TigerCompiler\\Grammar\\tiger.g:154:4: ( auxOR ( OR ^ auxOR )* )
			DebugEnterAlt(1);
			// C:\\Users\\Yanesita&Machy\\Desktop\\TIGER-YanetFrancisco(C412)-FabiolaBecerra(C411)\\CODIGO\\TigerCompiler\\TigerCompiler\\Grammar\\tiger.g:154:7: auxOR ( OR ^ auxOR )*
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(154, 7);
			PushFollow(Follow._auxOR_in_exp820);
			auxOR3=auxOR();
			PopFollow();
			if (state.failed) return retval;
			if (state.backtracking == 0) adaptor.AddChild(root_0, auxOR3.Tree);
			DebugLocation(154, 14);
			// C:\\Users\\Yanesita&Machy\\Desktop\\TIGER-YanetFrancisco(C412)-FabiolaBecerra(C411)\\CODIGO\\TigerCompiler\\TigerCompiler\\Grammar\\tiger.g:154:14: ( OR ^ auxOR )*
			try { DebugEnterSubRule(1);
			while (true)
			{
				int alt1=2;
				try { DebugEnterDecision(1, false);
				int LA1_0 = input.LA(1);

				if ((LA1_0==OR))
				{
					int LA1_2 = input.LA(2);

					if ((EvaluatePredicate(synpred1_tiger_fragment)))
					{
						alt1 = 1;
					}


				}


				} finally { DebugExitDecision(1); }
				switch ( alt1 )
				{
				case 1:
					DebugEnterAlt(1);
					// C:\\Users\\Yanesita&Machy\\Desktop\\TIGER-YanetFrancisco(C412)-FabiolaBecerra(C411)\\CODIGO\\TigerCompiler\\TigerCompiler\\Grammar\\tiger.g:154:15: OR ^ auxOR
					{
					DebugLocation(154, 17);
					OR4=(IToken)Match(input,OR,Follow._OR_in_exp824); if (state.failed) return retval;
					if (state.backtracking == 0) {
					OR4_tree = (object)adaptor.Create(OR4);
					root_0 = (object)adaptor.BecomeRoot(OR4_tree, root_0);
					}
					DebugLocation(154, 20);
					PushFollow(Follow._auxOR_in_exp828);
					auxOR5=auxOR();
					PopFollow();
					if (state.failed) return retval;
					if (state.backtracking == 0) adaptor.AddChild(root_0, auxOR5.Tree);

					}
					break;

				default:
					goto loop1;
				}
			}

			loop1:
				;

			} finally { DebugExitSubRule(1); }


			}

			retval.Stop = (IToken)input.LT(-1);

			if (state.backtracking == 0) {
			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("exp", 2);
			LeaveRule("exp", 2);
			LeaveRule_exp();
		}
		DebugLocation(154, 29);
		} finally { DebugExitRule(GrammarFileName, "exp"); }
		return retval;

	}
	// $ANTLR end "exp"

	partial void EnterRule_auxOR();
	partial void LeaveRule_auxOR();

	// $ANTLR start "auxOR"
	// C:\\Users\\Yanesita&Machy\\Desktop\\TIGER-YanetFrancisco(C412)-FabiolaBecerra(C411)\\CODIGO\\TigerCompiler\\TigerCompiler\\Grammar\\tiger.g:156:1: auxOR : auxAND ( AND ^ auxAND )* ;
	[GrammarRule("auxOR")]
	private AstParserRuleReturnScope<object, IToken> auxOR()
	{
		EnterRule_auxOR();
		EnterRule("auxOR", 3);
		TraceIn("auxOR", 3);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken AND7 = default(IToken);
		AstParserRuleReturnScope<object, IToken> auxAND6 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> auxAND8 = default(AstParserRuleReturnScope<object, IToken>);

		object AND7_tree = default(object);
		try { DebugEnterRule(GrammarFileName, "auxOR");
		DebugLocation(156, 30);
		try
		{
			// C:\\Users\\Yanesita&Machy\\Desktop\\TIGER-YanetFrancisco(C412)-FabiolaBecerra(C411)\\CODIGO\\TigerCompiler\\TigerCompiler\\Grammar\\tiger.g:156:6: ( auxAND ( AND ^ auxAND )* )
			DebugEnterAlt(1);
			// C:\\Users\\Yanesita&Machy\\Desktop\\TIGER-YanetFrancisco(C412)-FabiolaBecerra(C411)\\CODIGO\\TigerCompiler\\TigerCompiler\\Grammar\\tiger.g:156:9: auxAND ( AND ^ auxAND )*
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(156, 9);
			PushFollow(Follow._auxAND_in_auxOR841);
			auxAND6=auxAND();
			PopFollow();
			if (state.failed) return retval;
			if (state.backtracking == 0) adaptor.AddChild(root_0, auxAND6.Tree);
			DebugLocation(156, 16);
			// C:\\Users\\Yanesita&Machy\\Desktop\\TIGER-YanetFrancisco(C412)-FabiolaBecerra(C411)\\CODIGO\\TigerCompiler\\TigerCompiler\\Grammar\\tiger.g:156:16: ( AND ^ auxAND )*
			try { DebugEnterSubRule(2);
			while (true)
			{
				int alt2=2;
				try { DebugEnterDecision(2, false);
				int LA2_0 = input.LA(1);

				if ((LA2_0==AND))
				{
					int LA2_2 = input.LA(2);

					if ((EvaluatePredicate(synpred2_tiger_fragment)))
					{
						alt2 = 1;
					}


				}


				} finally { DebugExitDecision(2); }
				switch ( alt2 )
				{
				case 1:
					DebugEnterAlt(1);
					// C:\\Users\\Yanesita&Machy\\Desktop\\TIGER-YanetFrancisco(C412)-FabiolaBecerra(C411)\\CODIGO\\TigerCompiler\\TigerCompiler\\Grammar\\tiger.g:156:17: AND ^ auxAND
					{
					DebugLocation(156, 20);
					AND7=(IToken)Match(input,AND,Follow._AND_in_auxOR844); if (state.failed) return retval;
					if (state.backtracking == 0) {
					AND7_tree = (object)adaptor.Create(AND7);
					root_0 = (object)adaptor.BecomeRoot(AND7_tree, root_0);
					}
					DebugLocation(156, 22);
					PushFollow(Follow._auxAND_in_auxOR847);
					auxAND8=auxAND();
					PopFollow();
					if (state.failed) return retval;
					if (state.backtracking == 0) adaptor.AddChild(root_0, auxAND8.Tree);

					}
					break;

				default:
					goto loop2;
				}
			}

			loop2:
				;

			} finally { DebugExitSubRule(2); }


			}

			retval.Stop = (IToken)input.LT(-1);

			if (state.backtracking == 0) {
			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("auxOR", 3);
			LeaveRule("auxOR", 3);
			LeaveRule_auxOR();
		}
		DebugLocation(156, 30);
		} finally { DebugExitRule(GrammarFileName, "auxOR"); }
		return retval;

	}
	// $ANTLR end "auxOR"

	partial void EnterRule_auxAND();
	partial void LeaveRule_auxAND();

	// $ANTLR start "auxAND"
	// C:\\Users\\Yanesita&Machy\\Desktop\\TIGER-YanetFrancisco(C412)-FabiolaBecerra(C411)\\CODIGO\\TigerCompiler\\TigerCompiler\\Grammar\\tiger.g:158:1: auxAND : auxPM ( ( EQ ^ auxPM ) | ( NOTEQ ^ auxPM ) | ( LTEQ ^ auxPM ) | ( GTEQ ^ auxPM ) | ( LT ^ auxPM ) | ( GT ^ auxPM ) )? ;
	[GrammarRule("auxAND")]
	private AstParserRuleReturnScope<object, IToken> auxAND()
	{
		EnterRule_auxAND();
		EnterRule("auxAND", 4);
		TraceIn("auxAND", 4);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken EQ10 = default(IToken);
		IToken NOTEQ12 = default(IToken);
		IToken LTEQ14 = default(IToken);
		IToken GTEQ16 = default(IToken);
		IToken LT18 = default(IToken);
		IToken GT20 = default(IToken);
		AstParserRuleReturnScope<object, IToken> auxPM9 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> auxPM11 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> auxPM13 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> auxPM15 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> auxPM17 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> auxPM19 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> auxPM21 = default(AstParserRuleReturnScope<object, IToken>);

		object EQ10_tree = default(object);
		object NOTEQ12_tree = default(object);
		object LTEQ14_tree = default(object);
		object GTEQ16_tree = default(object);
		object LT18_tree = default(object);
		object GT20_tree = default(object);
		try { DebugEnterRule(GrammarFileName, "auxAND");
		DebugLocation(158, 107);
		try
		{
			// C:\\Users\\Yanesita&Machy\\Desktop\\TIGER-YanetFrancisco(C412)-FabiolaBecerra(C411)\\CODIGO\\TigerCompiler\\TigerCompiler\\Grammar\\tiger.g:158:7: ( auxPM ( ( EQ ^ auxPM ) | ( NOTEQ ^ auxPM ) | ( LTEQ ^ auxPM ) | ( GTEQ ^ auxPM ) | ( LT ^ auxPM ) | ( GT ^ auxPM ) )? )
			DebugEnterAlt(1);
			// C:\\Users\\Yanesita&Machy\\Desktop\\TIGER-YanetFrancisco(C412)-FabiolaBecerra(C411)\\CODIGO\\TigerCompiler\\TigerCompiler\\Grammar\\tiger.g:158:10: auxPM ( ( EQ ^ auxPM ) | ( NOTEQ ^ auxPM ) | ( LTEQ ^ auxPM ) | ( GTEQ ^ auxPM ) | ( LT ^ auxPM ) | ( GT ^ auxPM ) )?
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(158, 10);
			PushFollow(Follow._auxPM_in_auxAND858);
			auxPM9=auxPM();
			PopFollow();
			if (state.failed) return retval;
			if (state.backtracking == 0) adaptor.AddChild(root_0, auxPM9.Tree);
			DebugLocation(158, 16);
			// C:\\Users\\Yanesita&Machy\\Desktop\\TIGER-YanetFrancisco(C412)-FabiolaBecerra(C411)\\CODIGO\\TigerCompiler\\TigerCompiler\\Grammar\\tiger.g:158:16: ( ( EQ ^ auxPM ) | ( NOTEQ ^ auxPM ) | ( LTEQ ^ auxPM ) | ( GTEQ ^ auxPM ) | ( LT ^ auxPM ) | ( GT ^ auxPM ) )?
			int alt3=7;
			try { DebugEnterSubRule(3);
			try { DebugEnterDecision(3, false);
			switch (input.LA(1))
			{
			case EQ:
				{
				int LA3_1 = input.LA(2);

				if ((EvaluatePredicate(synpred3_tiger_fragment)))
				{
					alt3 = 1;
				}
				}
				break;
			case NOTEQ:
				{
				int LA3_2 = input.LA(2);

				if ((EvaluatePredicate(synpred4_tiger_fragment)))
				{
					alt3 = 2;
				}
				}
				break;
			case LTEQ:
				{
				int LA3_3 = input.LA(2);

				if ((EvaluatePredicate(synpred5_tiger_fragment)))
				{
					alt3 = 3;
				}
				}
				break;
			case GTEQ:
				{
				int LA3_4 = input.LA(2);

				if ((EvaluatePredicate(synpred6_tiger_fragment)))
				{
					alt3 = 4;
				}
				}
				break;
			case LT:
				{
				int LA3_5 = input.LA(2);

				if ((EvaluatePredicate(synpred7_tiger_fragment)))
				{
					alt3 = 5;
				}
				}
				break;
			case GT:
				{
				int LA3_6 = input.LA(2);

				if ((EvaluatePredicate(synpred8_tiger_fragment)))
				{
					alt3 = 6;
				}
				}
				break;
			}

			} finally { DebugExitDecision(3); }
			switch (alt3)
			{
			case 1:
				DebugEnterAlt(1);
				// C:\\Users\\Yanesita&Machy\\Desktop\\TIGER-YanetFrancisco(C412)-FabiolaBecerra(C411)\\CODIGO\\TigerCompiler\\TigerCompiler\\Grammar\\tiger.g:158:17: ( EQ ^ auxPM )
				{
				DebugLocation(158, 17);
				// C:\\Users\\Yanesita&Machy\\Desktop\\TIGER-YanetFrancisco(C412)-FabiolaBecerra(C411)\\CODIGO\\TigerCompiler\\TigerCompiler\\Grammar\\tiger.g:158:17: ( EQ ^ auxPM )
				DebugEnterAlt(1);
				// C:\\Users\\Yanesita&Machy\\Desktop\\TIGER-YanetFrancisco(C412)-FabiolaBecerra(C411)\\CODIGO\\TigerCompiler\\TigerCompiler\\Grammar\\tiger.g:158:18: EQ ^ auxPM
				{
				DebugLocation(158, 20);
				EQ10=(IToken)Match(input,EQ,Follow._EQ_in_auxAND862); if (state.failed) return retval;
				if (state.backtracking == 0) {
				EQ10_tree = (object)adaptor.Create(EQ10);
				root_0 = (object)adaptor.BecomeRoot(EQ10_tree, root_0);
				}
				DebugLocation(158, 22);
				PushFollow(Follow._auxPM_in_auxAND865);
				auxPM11=auxPM();
				PopFollow();
				if (state.failed) return retval;
				if (state.backtracking == 0) adaptor.AddChild(root_0, auxPM11.Tree);

				}

